--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
             <h3 class="contact-title sidebar__title">Contacts</h3>
             <ul class="contact-list sidebar__list">
               <li class="contact-item sidebar__item">
-                <p class="contact__link">Zory, Poland</p>
+                <!-- <p class="contact__link">Zory, Poland</p> -->
+                <p class="contact__link">Zaporizhzhia, Ukraine</p>
               </li>
 
               <li class="contact-item sidebar__item">
-                <a class="contact__link" href="tel:+48572101732">+4 8 572 101 732</a>
+                <!-- <a class="contact__link" href="tel:+48572101732">+4 8 572 101 732</a> -->
+                <a class="contact__link" href="tel:+380963597939">+3 8 096 359 79 39</a>
               </li>
 
               <li class="contact-item sidebar__item">
@@ -79,6 +81,8 @@
               <li class="sidebar__item"><span class="sidebar__text">REST API</span></li>
               <li class="sidebar__item"><span class="sidebar__text">NPM</span></li>
               <li class="sidebar__item"><span class="sidebar__text">Parcel</span></li>
+              <li class="sidebar__item"><span class="sidebar__text">MongoDB</span></li>
+              <li class="sidebar__item"><span class="sidebar__text">NodeJS</span></li>
             </ul>
           </div>
 
@@ -101,9 +105,9 @@
               <li class="sidebar__item">
                 <span class="sidebar__text"> English pre intermediate </span>
               </li>
-              <li class="sidebar__item">
+              <!-- <li class="sidebar__item">
                 <span class="sidebar__text"> Polish pre intermediate </span>
-              </li>
+              </li> -->
               <li class="sidebar__item">
                 <span class="sidebar__text"> Ukraine native </span>
               </li>
@@ -138,8 +142,8 @@
                   HTML5-Styled Components-REACT.JS-Redux Toolkit-MongoDB-NodeJS
                 </p>
                 <p class="project__description">
-                  Application will help you to create your goal faster and proceed to read, divide
-                  process proportionally for each day, track your success.
+                  Application will help you formulate your goal and start reading, divide process
+                  proportionally for each day and track personal success.
                 </p>
               </li>
               <li class="project__item">
