--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <header class="header">
         <div class="header__wrapper">
           <div class="header__text">
-            <p class="header__profession">Front-End Developer</p>
+            <p class="header__profession">Full Stack Developer</p>
             <h1 class="header__name">Anna Fesenko</h1>
           </div>
           <div class="triangle"></div>
@@ -135,6 +135,12 @@
                 <a
                   class="project__link inline"
                   href="https://annafesenko7.github.io/book-reader-front-end/training/"
+                  >link.
+                </a>
+                <span class="project__name inline"> Backend</span>
+                <a
+                  class="project__link inline"
+                  href="https://book-reader-jr3w.onrender.com/api-docs/"
                   >link.
                 </a>
                 <!-- <p class="project__role inline">Front-end developer</p> -->
